# Backend-SHA

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  Procfile  README.md  app.ini  pre-commit-config.yaml  pyproject.toml  requirements.txt  wsgi.py
migrations/: env.py
src/: __init__.py  app.py  config.py
src/lib/exceptions/: circular_exception.py
src/models/: index.py
src/models/adaptation_condition/: adaptation_condition.py
src/models/adaptative_event/: adaptative_event.py
src/models/adaptative_object/: adaptative_object.py
src/models/answer_alternative/: answer_alternative.py
src/models/interaction_fired/: interaction_fired.py
src/models/learning_content/: learning_content.py
src/models/learning_style/: learning_style.py
src/models/many_to_many/: topic_precedence.py
src/models/measurable_interaction/: measurable_interaction.py
src/models/page/: page.py
src/routes/: index.py
src/schemas/: index.py
tests/: conftest.py  test_app.py
tests/models/: conftest.py  sample_test.py  test_adaptation_condition.py  test_adaptative_event.py  test_adaptative_object.py  test_answer_alternative.py  test_interaction_fired.py  test_learning_content.py  test_learning_style.py  test_measurable_interaction.py  test_page.py  test_practice_test.py  test_question_answer.py  test_role.py  test_selected_answer_alternatives.py  test_template.py  test_test_attempt.py  test_test_question.py  test_topic.py  test_user.py
tests/schemas/: test_default_schemas.py  test_non_default_schemas.py
(+90 files in other folders)
