[tool.poetry]
name = "backend-sha"
version = "0.1.0"
description = "Backend de Sistema de Hipermedia Adaptativa"
authors = ["Andrés Betancourt <30258079@correo.unimet.edu.ve>"]
readme =  "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
uWSGI = "^2.0.20"
flasgger = "^0.9.5"
flask-marshmallow = "^0.14.0"
apispec = "^5.2.2"
SQLAlchemy = "^1.4.39"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.3"
marshmallow-sqlalchemy = "^0.28.0"
pre-commit = "^2.19.0"
Flask-Cors = "^3.0.10"
firebase-admin = "^5.2.0"
Python-EasyGraph = "^0.2a39"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.9"
black = "^22.3.0"
pre-commit = "^2.19.0"
pylint = "^2.14.3"
pytest = "^7.1.2"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
